- sync now adds the spec file (pointed by blino)
- fixed putsrpm to not create old log files for packages without changelog
- submit now can fetch the revision number if not specified (it also shows
  the author and the first line of the commit)
- allow submitting many packages at once, even without support on server
  side (the same behavior as running repsys submit for each package)

* 1.7
- dropped all authenticated access support: subversion authentication has
  been broken for a long time and the workarounds weren't decent. It will
  be back in 1.7.x.
- added configuration option svn-command in the global section, allowing
  to replace the default svn command
- force svn+ssh:// URLs to be in BatchMode, in order to not have any
  interactivity at all with ssh
- fixed incompatibility with Python-2.4 on urlparse
- fixed emptylog message, which was not being shown when needed
- distributions can be specified by using <distro>/<package> in all
  commands
- allow submitting many packages at once (#28352)
- package revisions in submit are now specified with name@nnn
- the user can define groups of packages to be submitted in the section
  "submit-groups"
- make 'repsys submit' without package name or revision number work again
- added option --distro to submit
- make putsrpm work again
- added subcommand import as an alias to putsrpm
- template: hide the first release when it has only invisible lines
- added initial man page
- allow resorting changelog entries through the config option sort in the
  log section
- added rpmlog options: -o to append the old changelog, -p to append the
  changelog found in the spec, and -s to resort all changelog entries
- rpmlog, getsrpm, getspec and changed will use the mirror if enabled
- don't hide authors with only the first revision SILENTed (#41117)
- fixed bad url used when using -v in getsrpm
- if REPSYS_CONF is set, /etc/repsys.conf and ~/.repsys/config will not be
  readed anymore